# umn-ta2-mineral-site-linkage

./: .fusemine_model.pkl  .gitattributes  .gitignore  Dockerfile  IOU.csv  MRDS_mapfile.csv  Nickel.geojson  README.md  USMIN.geojson  USMIN_mapfile.csv  __main__.py  _archive_fusemine.py  archive.csv  ardf_mapfile.csv  base_metal.xls  base_metal_mvt.xls  cerium_datafile.csv  check.py  check_zinc_data.py  circular_loop.csv  cobalt.csv  cobalt_0.csv  cobalt_1.csv  cobalt_10.csv  cobalt_11.csv  cobalt_12.csv  cobalt_13.csv  cobalt_14.csv  cobalt_15.csv  cobalt_16.csv  cobalt_17.csv  cobalt_2.csv  cobalt_3.csv  cobalt_4.csv  cobalt_5.csv  cobalt_6.csv  cobalt_7.csv  cobalt_8.csv  cobalt_9.csv  cobalt_datafile.csv  (+105 more)
_archive_entities/: category.csv  commodity.csv  deposit_type.csv  material_form.csv  unit.csv
_archive_resource/: GBW_MRDS.csv  attribute_archive.pkl  commodities.pkl  mrds_commodity_code.csv  states_map.csv
_archive_utils/: append_rawdata.py  combine_grouping_results.py  compare_text.py  convert_dataframe.py  load_kg_data.py
document_testing/: ardf.out  diff_partition.out  edit_test.out  full_document.out  output_geojson.out  part_MRDS.pkl  part_USMIN.pkl  preprocess_USMIN.out  preprocessing_Ni.out  preprocessing_W.out  preprocessing_data.out  testing_tungsten.out  tungsten_skarn_test.out  w_naive.out
dummy_path/: somethingnew.csv
entities/: commodity.csv  epsg.csv
fusemine/: __init__.py  __main__.py  _fusemine.py  _utils.py  params.py
logs/: experiment_logs.md  versions_detail.txt
m0_load_input/: load_data.py  save_ckpt.py
m0_loading_and_saving/: load_kg_data.py  load_local_data.py  load_mapped_dictionary.py  process_gpkg_to_json.py  save_sameas_output.py  save_to_geojson_output.py  save_to_json_output.py
m1_input_preprocessing/: preprocess_dictionary.py  preprocess_input.py  preprocess_schema.py
m1_preprocessing/: compare_attribute_def_similarity.py  extract_attributes_from_db.py  format_table_to_schema.py  process_gpkg_to_json.py  todo.md  (+2 more)
(+277 files in other folders)
